src/trusted/validator_arm/testdata/bad/invalid_stores.hex
#
# Tests various forms of stores.
#

# A few forms of register-offset store -- illegal in all contexts.
e7810002  # str r0, [r1, r2]
e7a10002  # str r0, [r1, r2]!
e7810022  # str r0, [r1, r2, LSR #32]

# Looks like a mask instruction for the store below, but the bundle is wrong.
e3c11480  # bic r1, r1, #0x80000000

# An immediate-offset store at the beginning of a bundle, so its mask is
# sheared off.
e5810042  # str r0, [r1, #0x42]

# An immediate-offset store without preceding mask at all.
e5810042  # str r0, [r1, #0x42]

# An immediate-offset store with the correct mask.
e3c11480  # bic r1, r1, #0x80000000
e5810042  # str r0, [r1, #0x42]

# An immediate-offset store with the wrong mask.
e3c00480  # bic r0, r0, #0x80000000 - wrong register
e5810042  # str r0, [r1, #0x42]

# An immediate-offset store with the right mask, but wrong condition.
03c11480  # biceq r1, r1, #0x80000000
e5810042  # str r0, [r1, #0x42]

